
2009-03-15 13:57 Ali aliov@xfce.org 
	 * : Added some icons from gpm+Catch brightness key to avoid display flickering

2009-03-15 11:34 Ali aliov@xfce.org 
	 * : Removed no longer available .la file from libxfpm

2009-03-15 11:12 Ali aliov@xfce.org 
	 * : Patched to fix makefile typo and correct the POTFILES.in (Yves Alexis)+Use a weak reference for the common objects

2009-03-14 19:26 Ali aliov@xfce.org 
	 * : Added the missing desktop file, Thanks to Mike for pointing out

2009-03-14 17:23 Ali aliov@xfce.org 
	 * : Added desktop file to be installed in xdt/autostart

2009-03-14 16:40 Ali aliov@xfce.org 
	 * : Idle function to reduce screen luminosity after a certain time+fix a bug in the adapter code

2009-03-13 16:31 Ali aliov@xfce.org 
	 * : Move common code to hal-device+ fix issue with the apater of the previous revision

2009-03-13 14:01 Ali aliov@xfce.org 
	 * : Dropping the libhal dependency, just doing simple proxy calls to get informations from hald

2009-03-11 20:38 Ali aliov@xfce.org 
	 * : Implement critical battery level settings+the option to disable lock screen when suspend/hibernate

2009-03-11 13:33 Ali aliov@xfce.org 
	 * : Set dpms to standby or suspend depending on the user settings

2009-03-11 13:06 Ali aliov@xfce.org 
	 * : Fix infinite loop caused by g_signal_connect+added advanced settings in the dialog

2009-03-10 21:13 Ali aliov@xfce.org 
	 * : properties shutdown,suspend and hibernate are noe strings in xfce4-power-manager channel configuration

2009-03-10 13:24 Ali aliov@xfce.org 
	 * : Handle critical battery charge+ update on the notifications

2009-03-10 10:11 Ali aliov@xfce.org 
	 * : Added Only show in XFCE in the autostart file and correct tooltip of a primary battery

2009-03-09 23:09 Ali aliov@xfce.org 
	 * : Changes in the battery tooltips/notifications

2009-03-09 13:22 Ali aliov@xfce.org 
	 * : Bump xfce dependencies version to 4.6.0

2009-03-09 10:33 Ali aliov@xfce.org 
	 * : Fix a Gtk Warning in the settings dialog
