@@ -1,4 +1,7 @@
 
+2009-03-16 15:39 Ali aliov@xfce.org 
+	 * : Set brightness idle level to the last user selected level+Fix a bug in SetCpuFreqGovernor that was causing a proxy disconnection
+
 2009-03-15 13:57 Ali aliov@xfce.org 
 	 * : Added some icons from gpm+Catch brightness key to avoid display flickering
 
